--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-click==8.1.3
-colorama==0.4.6
-Flask==2.2.2
+blinker==1.7.0
+blueprint==3.4.2
+certifi==2023.11.17
+click==8.1.7
+distlib==0.3.8
+filelock==3.13.1
+Flask==3.0.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-Werkzeug==2.2.2
+Jinja2==3.1.3
+lxml==5.1.0
+MarkupSafe==2.1.3
+platformdirs==4.1.0
+python-docx==1.1.0
+typing_extensions==4.9.0
+virtualenv==20.25.0
+Werkzeug==3.0.1
